# spatialdb-engine

./: .clang-format  .clang-tidy  .env.example  .gitignore  .gitlab-ci.yml  .travis.yml  BACKERS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  build.sh  go.mod  go.sum  test.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: main.yml
client/: README.md  conn.go  helper.go  pool.go
config/: NEW_NAME.example.yaml  NEW_NAME.production.yaml
controller/: aof.go  aofmigrate.go  aofshrink.go  checksum.go  client.go  config.go  controller.go  crud.go  dev.go  expire.go  fence.go  follow.go  hooks.go  json.go  keys.go  live.go  output.go  readonly.go  scan.go  scanner.go  scripts.go  search.go  stats.go
controller/collection/: collection.go  collection_test.go
controller/endpoint/: endpoint.go  grpc.go  mqtt.go
controller/server/: reader.go  server.go
core/: commands.go  commands.json  commands_gen.go  commands_test.go  gen.sh  options.go  version.go
cpp/bench/: benchmark.cpp  benchmark.h  spatial_bench.cpp
cpp/cluster/: health_check.cpp  health_check.h  replication.cpp  replication.h
cpp/geometry/: distance.cpp  polygon.cpp
cpp/include/: geometry.h  index.h  query.h  spatialdb.h
cpp/lua/: script_engine.cpp  script_engine.h
cpp/metrics/: counters.cpp  counters.h
cpp/net/: conn_pool.cpp  conn_pool.h  http_handler.cpp  http_handler.h  load_balancer.cpp  load_balancer.h  middleware.cpp  middleware.h  protocol.cpp  protocol.h  server.cpp  server.h  tls.cpp  tls.h
cpp/query/: aggregation.cpp  aggregation.h  cursor.cpp  cursor.h  engine.cpp  filter.cpp  filter.h  parser.cpp  parser.h
cpp/spatial/: geohash.cpp  geohash.h  grid_index.cpp  grid_index.h  hilbert.cpp  hilbert.h  knn.cpp  knn.h  polygon_ops.cpp  polygon_ops.h  quadtree.cpp  quadtree.h  rtree.cpp  rtree.h  rtree_bulk.cpp  s2_bridge.cpp  s2_bridge.h  voronoi.cpp  voronoi.h
cpp/storage/: aof.cpp  aof.h  bloom_filter.cpp  bloom_filter.h  compactor.cpp  compactor.h  lsm_tree.cpp  lsm_tree.h  page_cache.cpp  page_cache.h  snapshot.cpp  snapshot.h  ttl_manager.cpp  ttl_manager.h  wal.cpp  wal.h
cpp/test/: geohash_validation_test.cpp  (+4 more)
docker/: Dockerfile  README.md
docs/: API.md  ARCHITECTURE.md  RUNBOOK.md
geojson/: bbox.go  detect.go  feature.go  featurecollection.go  geometrycollection.go  linestring.go  multilinestring.go  multipoint.go  multipolygon.go  object.go  point.go  polygon.go  position.go  simplepoint.go
hservice/: hservice.proto
index/: index.go
kml/: kml.go
scripts/: RELEASE.md  backup-to-s3.sh  build.sh  docker-push.sh  package.sh  setup-dev.sh  test.sh  travis-docker-push.sh
server/: server.go
(+863 files in other folders)
